--- a/programming site(2021.10.21-My New Project).html
+++ b/programming site(2021.10.21-My New Project).html
@@ -55,7 +55,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color:	#32CD32 ;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-         <img src="D:\WEB DEVELOPMENT\Web Development\Programming.hub\images\logo.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+         <img src="Programming.hub/images/1.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
            Programming.Hub
          </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
